--- a/frontend/src/app/core/shared-components/int-trim-picker/int-trim-picker.component.html
+++ b/frontend/src/app/core/shared-components/int-trim-picker/int-trim-picker.component.html
@@ -6,7 +6,7 @@
       <p>Our interior is hand woven leather stuff with suade and stuff</p>
 
       <div>
-        <h4>Currently: <i>{{trim}}</i></h4>
+        <h4>Currently: <i>{{selectedTrim}}</i></h4>
 
         <ul>
           <li (click)="updateTrim('Black')">Black</li>
@@ -17,7 +17,7 @@
 
     </div>
 
-    <app-int-display></app-int-display>
+    <app-trim-display></app-trim-display>
   </div>
 
 </div>
