--- a/frontend/src/app/pages/protected-pages/profile-page/components/list-cars/list-cars.component.scss
+++ b/frontend/src/app/pages/protected-pages/profile-page/components/list-cars/list-cars.component.scss
@@ -1,14 +1,10 @@
 .grid {
-  grid-template-columns: 1fr 2fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 }
 
 .flex {
   display: flex;
   flex-direction: column;
-}
-
-button {
-  margin: 20px;
 }
 
 li {
