--- a/frontend/src/app/pages/protected-pages/profile-page/components/edit-profile/edit-profile.component.html
+++ b/frontend/src/app/pages/protected-pages/profile-page/components/edit-profile/edit-profile.component.html
@@ -31,5 +31,7 @@
       <button type="submit" class="btn">Update</button>
     </form>
 
+    <button (click)="onDelete()" type="submit" class="delete-btn">Delete Profile</button>
+
   </div>
 </p-sidebar>
