--- a/frontend/src/app/pages/protected-pages/profile-page/components/edit-profile/edit-profile.component.scss
+++ b/frontend/src/app/pages/protected-pages/profile-page/components/edit-profile/edit-profile.component.scss
@@ -22,22 +22,8 @@ form > p {
   margin: 3% 0;
 }
 
-// Register button, PrimeNG button is hard to style
-.btn {
-  display: inline-block;
-  padding: 10px 30px;
-  cursor: pointer;
-  color: #fff;
-  background-color: #17202f;
-  border: 1px solid white;
-  border-radius: 5px;
-  width: 100%;
-  opacity: 1;
-  margin: 5% 0;
-
-  &:hover {
-    border-color: #12d0ff;
-  }
+.delete-btn {
+  margin: 0;
 }
 
 // Error message
