--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -59,6 +59,7 @@ img {
   padding: 10px 30px;
   cursor: pointer;
   color: #fff;
+  background-color: #17202f;
   border: 1px solid white;
   border-radius: 5px;
   width: 100%;
@@ -67,6 +68,17 @@ img {
 
   &:hover {
     transform: scale(1.04);
+    color: white;
+    background-color: #1253bc;
+  }
+}
+
+.delete-btn {
+  @extend .btn;
+  color: rgba(255, 0, 0, 0.885);
+  border-color: rgba(255, 0, 0, 0.855);
+  &:hover {
+    background-color: rgba(255, 0, 0, 0.885);
   }
 }
 
