--- a/frontend/src/app/pages/protected-pages/profile-page/components/saved-cars/saved-cars.component.scss
+++ b/frontend/src/app/pages/protected-pages/profile-page/components/saved-cars/saved-cars.component.scss
@@ -1,3 +1,21 @@
 li {
   margin: 20px 0;
 }
+
+h2 {
+  margin: 20px;
+  font-weight: lighter;
+}
+
+p-card {
+  text-align: center;
+}
+
+.btn {
+  width: 350px;
+  margin: 0;
+}
+
+div {
+  margin-bottom: 40px;
+}
