--- a/frontend/src/app/pages/public-pages/landing-page/components/customisation/customisation.component.html
+++ b/frontend/src/app/pages/public-pages/landing-page/components/customisation/customisation.component.html
@@ -15,8 +15,7 @@
     </div>
     <div class="blurb g-area">
       <h4>Personalise your dream S90 to suit your needs</h4>
-      <a routerLink="/configurator"><button pButton pRipple type="button" label="Build your S90"
-          class="p-button-outlined"></button></a>
+      <a routerLink="/configurator"><button type="button" class="btn">Build your S90</button></a>
     </div>
   </div>
 </div>
