--- a/frontend/src/app/pages/protected-pages/profile-page/components/display-car/display-car.component.scss
+++ b/frontend/src/app/pages/protected-pages/profile-page/components/display-car/display-car.component.scss
@@ -1,3 +1,30 @@
 .grid {
   grid-template-columns: repeat(4, 1fr);
+  justify-items: start;
+}
+
+h4 {
+  font-size: 1.5rem;
+}
+
+.btn,
+.delete-btn {
+  border-radius: 0;
+}
+
+.small-screen {
+  .grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.xsmall-screen {
+  .grid {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 20px;
+  }
+  .btn,
+  .delete-btn {
+    margin: 0;
+  }
 }
