--- a/frontend/src/app/pages/protected-pages/profile-page/components/edit-accessories/edit-accessories.component.html
+++ b/frontend/src/app/pages/protected-pages/profile-page/components/edit-accessories/edit-accessories.component.html
@@ -1,4 +1,10 @@
-<button class="btn" (click)="showAcessoriesModal()">View and edit accessories</button>
+<div>
+  <h4>Accessories</h4>
+  <p id="trigger" (click)="showAcessoriesModal()" class="scale-animation"><fa-icon
+      [icon]="faPenToSquare"></fa-icon><span>
+      View and edit</span></p>
+</div>
+
 <p-dialog [(visible)]="displayAccessoriesModal" [modal]="true" [style]="{width: '90%'}" [baseZIndex]="10000"
   [draggable]="false" [resizable]="true">
 
