--- a/frontend/src/app/pages/protected-pages/profile-page/components/edit-trim/edit-trim.component.html
+++ b/frontend/src/app/pages/protected-pages/profile-page/components/edit-trim/edit-trim.component.html
@@ -1,4 +1,9 @@
-<button class="btn" (click)="showTrimModal()">View and edit your interior trim</button>
+<div>
+  <h4>Interior Trim</h4>
+  <p id="trigger" (click)="showTrimModal()" class="scale-animation"><fa-icon [icon]="faPenToSquare"></fa-icon><span>
+      View and edit</span></p>
+</div>
+
 <p-dialog [(visible)]="displayTrimModal" [modal]="true" [style]="{width: '90%'}" [baseZIndex]="10000"
   [draggable]="false" [resizable]="true">
 
