--- a/frontend/src/app/pages/public-pages/configurator-page/configurator-page.component.scss
+++ b/frontend/src/app/pages/public-pages/configurator-page/configurator-page.component.scss
@@ -19,20 +19,7 @@ div {
 .grid {
   grid-template-columns: 2fr 1fr;
 }
-// Register button, PrimeNG button is impossible to style
-.btn {
-  display: inline-block;
-  padding: 10px 30px;
-  cursor: pointer;
-  color: #fff;
-  background-color: #17202f;
-  border: 1px solid white;
-  border-radius: 5px;
-  width: 100%;
-  opacity: 1;
-  margin: 5% 0;
 
-  &:hover {
-    border-color: #12d0ff;
-  }
+.btn:hover {
+  transform: none;
 }
