--- a/frontend/src/app/pages/public-pages/landing-page/components/gallery/gallery.component.html
+++ b/frontend/src/app/pages/public-pages/landing-page/components/gallery/gallery.component.html
@@ -5,12 +5,12 @@
     <p-galleria [value]="images" [responsiveOptions]="responsiveOptions" [containerStyle]="{'max-width': '100%'}"
       [numVisible]="3" [circular]="true" [showItemNavigators]="true" [showItemNavigatorsOnHover]="true">
       <ng-template pTemplate="item" let-image>
-        <img [src]="path+image.previewImageSrc" [alt]="image.alt" [title]="image.title" style="width: 100%;" />
+        <img [src]="path+image.imageSrc" [alt]="image.alt" [title]="image.title" style="width: 100%;" />
       </ng-template>
 
       <ng-template pTemplate="thumbnail" let-image width="50%">
         <div class="grid  grid-nogutter justify-content-center">
-          <img [src]="path+image.thumbnailImageSrc" [alt]="image.alt" [title]="image.title" width=80% />
+          <img [src]="path+image.imageSrc" [alt]="image.alt" [title]="image.title" width=80% />
         </div>
       </ng-template>
     </p-galleria>
