--- a/frontend/src/app/pages/public-pages/landing-page/components/customisation/customisation.component.scss
+++ b/frontend/src/app/pages/public-pages/landing-page/components/customisation/customisation.component.scss
@@ -6,16 +6,12 @@ button {
 h4 {
   font-size: 1.5rem;
   font-weight: lighter;
-  margin: 3% 0;
+  margin: 8px 0;
 }
 
 .grid {
   grid-template-columns: repeat(3, 1fr);
   height: fit-content;
-}
-
-.exterior-shadow {
-  filter: brightness(0) saturate(100);
 }
 
 .blurb {
@@ -28,14 +24,7 @@ h4 {
 }
 
 // For mobile
-@mixin small-screens {
-  .grid {
-    margin: 0 5%;
-  }
-}
-
 .small-screen {
-  @include small-screens;
   @for $i from 1 to 4 {
     .g-area:nth-child(#{$i}) {
       grid-area: s + $i;
@@ -43,14 +32,15 @@ h4 {
   }
 
   .grid {
+    margin: 0 5%;
     grid-template-columns: repeat(2, 1fr);
     grid-template-areas: "s1 s2" "s3 s3";
   }
 }
 
 .xsmall-screen {
-  @include small-screens;
   .grid {
+    margin: 0 5%;
     gap: 0%;
     grid-template-areas: "s1" "s2" "s3";
     grid-template-columns: 1fr;
