Refactored interfaces and types

--- a/frontend/src/app/core/shared-components/accessories/accessories.component.html
+++ b/frontend/src/app/core/shared-components/accessories/accessories.component.html
@@ -1,4 +1,4 @@
-<div id="accessories-wrapper" [ngClass]="{'container' : !isSmall, 'small-screen': isSmall, 'xsmall-screen': isXSmall}">
+<div id="accessories-wrapper">
   <h3>Accessories</h3>
 
   <div id="options-wrapper">
