--- a/frontend/src/app/core/shared-components/int-trim-picker/int-trim-picker.component.html
+++ b/frontend/src/app/core/shared-components/int-trim-picker/int-trim-picker.component.html
@@ -17,7 +17,7 @@
 
     </div>
 
-    <app-trim-display></app-trim-display>
+    <app-trim-display [selectedTrim]="selectedTrim"></app-trim-display>
   </div>
 
 </div>
