--- a/frontend/src/app/core/shared-components/trim-display/trim-display.component.html
+++ b/frontend/src/app/core/shared-components/trim-display/trim-display.component.html
@@ -2,16 +2,19 @@
 
   <div id="int-wrapper" class="grid">
     <div>
-      <img src="https://ik.imagekit.io/h0s40k5ceq/photos/gallery/4k-head-on.jpg" alt="">
+      <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/4k-head-on.jpg'" alt="">
     </div>
     <div>
-      <img src="https://ik.imagekit.io/h0s40k5ceq/photos/gallery/1080p-water.jpg" alt="">
+      <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/1080p-water.jpg'" alt="">
+
     </div>
     <div>
-      <img src="https://ik.imagekit.io/h0s40k5ceq/photos/gallery/1080p-evening-bridge.jpg" alt="">
+      <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/1080p-evening-bridge.jpg'"
+        alt="">
     </div>
     <div>
-      <img src="https://ik.imagekit.io/h0s40k5ceq/photos/gallery/1080p-architecture.jpg" alt="">
+      <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/interior/' + selectedTrim + '/1080p-architecture.jpg'"
+        alt="">
     </div>
   </div>
 
