--- a/frontend/src/app/pages/public-pages/landing-page/components/features/features.component.html
+++ b/frontend/src/app/pages/public-pages/landing-page/components/features/features.component.html
@@ -11,7 +11,7 @@
             ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
             velit
           </p>
-          <img [src]="'https://ik.imagekit.io/h0s40k5ceq/photos/features/'+images[0].imageSrc" alt="{{images[0].alt}}">
+          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/1080p-architecture.jpg" alt="photo of feature 1">
         </div>
       </p-accordionTab>
       <p-accordionTab header="Header II">
@@ -22,7 +22,7 @@
             ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
             velit
           </p>
-          <img src="{{path+images[1].imageSrc}}" alt="{{images[1].alt}}">
+          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/1080p-architecture.jpg" alt="photo of feature 1">
         </div>
       </p-accordionTab>
       <p-accordionTab header="Header III">
@@ -33,7 +33,7 @@
             ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
             velit
           </p>
-          <img src="{{path+images[2].imageSrc}}" alt="{{images[2].alt}}">
+          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/1080p-architecture.jpg" alt="photo of feature 2">
         </div>
       </p-accordionTab>
       <p-accordionTab header="Header IV">
@@ -44,7 +44,7 @@
             ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
             velit
           </p>
-          <img src="{{path+images[3].imageSrc}}" alt="{{images[3].alt}}">
+          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/1080p-architecture.jpg" alt="photo of feature 3">
         </div>
       </p-accordionTab>
       <p-accordionTab header="Coming Soon">
@@ -55,7 +55,7 @@
             ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
             velit
           </p>
-          <img src="{{path+images[4].imageSrc}}" alt="{{images[4].alt}}">
+          <img src="https://ik.imagekit.io/h0s40k5ceq/photos/features/1080p-architecture.jpg" alt="photo of feature 4">
         </div>
       </p-accordionTab>
     </p-accordion>
