--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -104,3 +104,8 @@ ul {
   width: 100% !important;
   position: relative !important;
 }
+
+.p-toast-detail,
+.p-toast-summary {
+  color: black !important;
+}
