--- a/frontend/src/app/pages/public-pages/landing-page/components/customisation/customisation.component.scss
+++ b/frontend/src/app/pages/public-pages/landing-page/components/customisation/customisation.component.scss
@@ -32,7 +32,7 @@ h4 {
   }
 
   .grid {
-    margin: 0 5%;
+    margin: 5%;
     grid-template-columns: repeat(2, 1fr);
     grid-template-areas: "s1 s2" "s3 s3";
   }
