Updated for red and silver ext colours

--- a/src/app/core/shared-components/ext-three-sixty/ext-three-sixty.component.html
+++ b/src/app/core/shared-components/ext-three-sixty/ext-three-sixty.component.html
@@ -2,7 +2,7 @@
   <p-galleria [value]="images" [responsiveOptions]="responsiveOptions" [containerStyle]="{'max-width': '100%'}"
     [circular]="true" [showItemNavigators]="false" [showThumbnails]="false">
     <ng-template pTemplate="item" let-image>
-      <img [src]="path+num+'.jpg'" [alt]="image.alt" [title]="image.title" style="width: 100%;" />
+      <img [src]="path+num+'.webp'" [alt]="image.alt" [title]="image.title" style="width: 100%;" />
     </ng-template>
   </p-galleria>
 
