--- a/src/app/core/shared-components/ext-colour-picker/ext-colour-picker.component.html
+++ b/src/app/core/shared-components/ext-colour-picker/ext-colour-picker.component.html
@@ -8,10 +8,10 @@
       <h4>Currently: <i>{{selectedExterior}}</i></h4>
 
       <ul>
-        <li (click)="updateExterior('Sonic Red')">Sonic Red</li>
+        <li (click)="updateExterior('Candy Red')">Candy Red</li>
         <li (click)="updateExterior('Frost White')">Frost White</li>
         <li (click)="updateExterior('Sudo Black')">Sudo Black</li>
-        <li (click)="updateExterior('Gunmetal Silver')">Gunmetal Silver</li>
+        <li (click)="updateExterior('Sonic Silver')">Sonic Silver</li>
       </ul>
 
     </div>
