Update Black and Blue ext photos

--- a/src/app/core/shared-components/ext-colour-picker/ext-colour-picker.component.html
+++ b/src/app/core/shared-components/ext-colour-picker/ext-colour-picker.component.html
@@ -9,9 +9,9 @@
 
       <ul>
         <li (click)="updateExterior('Candy Red')">Candy Red</li>
-        <li (click)="updateExterior('Frost White')">Frost White</li>
-        <li (click)="updateExterior('Sudo Black')">Sudo Black</li>
         <li (click)="updateExterior('Sonic Silver')">Sonic Silver</li>
+        <li (click)="updateExterior('Charcol')">Charcol</li>
+        <li (click)="updateExterior('Satin Blue')">Satin Blue</li>
       </ul>
 
     </div>
