Updated for interior photos

--- a/src/app/core/shared-components/int-trim-picker/int-trim-picker.component.html
+++ b/src/app/core/shared-components/int-trim-picker/int-trim-picker.component.html
@@ -10,7 +10,7 @@
 
         <ul>
           <li (click)="updateTrim('Black')">Black</li>
-          <li (click)="updateTrim('Beige')">Beige</li>
+          <li (click)="updateTrim('Tan')">Tan</li>
           <li (click)="updateTrim('Two-Tone')">Two-Tone</li>
         </ul>
       </div>
