Updated landing page carousel photos

--- a/src/app/pages/protected-pages/profile-page/components/display-car/display-car.component.html
+++ b/src/app/pages/protected-pages/profile-page/components/display-car/display-car.component.html
@@ -7,8 +7,8 @@
     <app-edit-accessories [selectedAccessories]="car.options"></app-edit-accessories>
     <h4>{{index + 1}} - {{car.brand}} {{car.model}}</h4>
 
-    <img src="https://ik.imagekit.io/h0s40k5ceq/photos/exterior/{{car.colour}}/0.jpg" alt="">
-    <img src="https://ik.imagekit.io/h0s40k5ceq/photos/interior/{{car.trim}}/4k-head-on.jpg" alt="">
+    <img src="https://ik.imagekit.io/h0s40k5ceq/photos/exterior/{{car.colour}}/0.jpg" alt="Exterior">
+    <img src="https://ik.imagekit.io/h0s40k5ceq/photos/interior/{{car.trim}}/4" alt="">
     <!-- <img src="https://ik.imagekit.io/h0s40k5ceq/photos/wheels/{{car.options[1].value}}/1" alt=""> -->
     <img src="https://ik.imagekit.io/h0s40k5ceq/photos/interior/{{car.trim}}/4k-head-on.jpg" alt="">
 
