Updated accessories options

--- a/src/app/pages/public-pages/landing-page/components/customisation/customisation.component.html
+++ b/src/app/pages/public-pages/landing-page/components/customisation/customisation.component.html
@@ -3,7 +3,7 @@
   <div id="customisation-wrapper" class="grid">
 
     <div>
-      <img class="g-area" src="https://ik.imagekit.io/h0s40k5ceq/photos/carousel/silhouette.png"
+      <img class="g-area" src="https://ik.imagekit.io/h0s40k5ceq/photos/carousel/silhouette.webp"
         alt="Silhouette of Volvo S90">
     </div>
 
